--- a/preferences/Resources/TTSettings.plist
+++ b/preferences/Resources/TTSettings.plist
@@ -5,18 +5,32 @@
 	<key>items</key>
 	<array>
 		<dict>
-			<key>cell</key>
-			<string>PSSwitchCell</string>
-			<key>default</key>
-			<true/>
-			<key>defaults</key>
-			<string>com.roccodelpriore.touchtracking.settings</string>
-			<key>key</key>
-			<string>TrackingEnabled</string>
-			<key>label</key>
-			<string>Enabled</string>
+			<key>cell</key>		<string>PSSwitchCell</string>
+			<key>default</key>	<true/>
+			<key>defaults</key>	<string>com.roccodelpriore.touchtracking.settings</string>
+			<key>key</key>		<string>TrackingEnabled</string>
+			<key>label</key>	<string>Enabled</string>
 		</dict>
-	</array>
+		<dict>
+			<key>cell</key> 		<string>PSGroupCell</string>
+			<key>label</key> 		<string>Netwrok</string>
+            <key>footerText</key> 	<string>These are network settings</string>
+		</dict>
+		<dict>
+			<key>cell</key>		<string>PSSwitchCell</string>
+			<key>default</key>	<true/>
+			<key>defaults</key>	<string>com.roccodelpriore.touchtracking.settings</string>
+			<key>key</key>		<string>UploadEnabled</string>
+			<key>label</key>	<string>Upload Logs</string>
+		</dict>
+		<dict>
+			<key>cell</key>		<string>PSSwitchCell</string>
+			<key>default</key>	<true/>	
+			<key>defaults</key>	<string>com.roccodelpriore.touchtracking.settings</string>
+			<key>key</key>		<string>CellularUploadEnabled</string>
+			<key>label</key>	<string>Use Cellular Network</string>
+		</dict>
+        </array>
 	<key>title</key>
 	<string>iOS Touch Tracking</string>
 </dict>
