--- a/preferences/entry.plist
+++ b/preferences/entry.plist
@@ -5,6 +5,6 @@
 	detail = TTSettingsListController;
 	icon = TTSettings.png;
 	isController = 1;
-	label = TTSettings;
+	label = TouchTracking;
     };
 }
