Fixed Memory Issue associated with uploading logs

--- a/preferences/Resources/TTSettings.plist
+++ b/preferences/Resources/TTSettings.plist
@@ -49,6 +49,6 @@
                 </dict>
         </array>
 	<key>title</key>
-	<string>iOS Touch Tracking</string>
+	<string>Touch Tracking</string>
 </dict>
 </plist>
