--- a/preferences/Resources/TTSettings.plist
+++ b/preferences/Resources/TTSettings.plist
@@ -1,53 +1,86 @@
-<?xml version="1.0" encoding="UTF-8"?> <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd"> <plist version="1.0"> <dict>
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
+<dict>
 	<key>items</key>
 	<array>
 		<dict>
-			<key>cell</key>		<string>PSSwitchCell</string>
-			<key>default</key>	<true/>
-			<key>defaults</key>	<string>com.roccodelpriore.touchtracking.settings</string>
-			<key>key</key>		<string>TrackingEnabled</string>
-			<key>label</key>	<string>Enabled</string>
+			<key>cell</key>
+			<string>PSSwitchCell</string>
+			<key>default</key>
+			<true/>
+			<key>defaults</key>
+			<string>com.roccodelpriore.touchtracking.settings</string>
+			<key>key</key>
+			<string>TrackingEnabled</string>
+			<key>label</key>
+			<string>Enabled</string>
 		</dict>
 		<dict>
-			<key>cell</key> 		<string>PSGroupCell</string>
-			<key>label</key> 		<string>Netwrok</string>
+			<key>cell</key>
+			<string>PSGroupCell</string>
+			<key>label</key>
+			<string>Netwrok</string>
 		</dict>
 		<dict>
-			<key>cell</key>		<string>PSSwitchCell</string>
-			<key>default</key>	<true/>
-			<key>defaults</key>	<string>com.roccodelpriore.touchtracking.settings</string>
-			<key>key</key>		<string>UploadEnabled</string>
-			<key>label</key>	<string>Upload Logs</string>
+			<key>cell</key>
+			<string>PSSwitchCell</string>
+			<key>default</key>
+			<true/>
+			<key>defaults</key>
+			<string>com.roccodelpriore.touchtracking.settings</string>
+			<key>key</key>
+			<string>UploadEnabled</string>
+			<key>label</key>
+			<string>Upload Logs</string>
 		</dict>
 		<dict>
-			<key>cell</key>		<string>PSSwitchCell</string>
-			<key>default</key>	<true/>	
-			<key>defaults</key>	<string>com.roccodelpriore.touchtracking.settings</string>
-			<key>key</key>		<string>CellularUploadEnabled</string>
-			<key>label</key>	<string>Use Cellular Network</string>
-                </dict> 
-                <dict>
-			<key>cell</key>		<string>PSSwitchCell</string>
-			<key>default</key>	<true/>	
-			<key>defaults</key>	<string>com.roccodelpriore.touchtracking.settings</string>
-			<key>key</key>		<string>DeleteLogsEnabled</string>
-			<key>label</key>	<string>Delete Logs After Upload</string>
+			<key>cell</key>
+			<string>PSSwitchCell</string>
+			<key>default</key>
+			<true/>
+			<key>defaults</key>
+			<string>com.roccodelpriore.touchtracking.settings</string>
+			<key>key</key>
+			<string>CellularUploadEnabled</string>
+			<key>label</key>
+			<string>Use Cellular Network</string>
 		</dict>
 		<dict>
-			<key>cell</key> 		<string>PSGroupCell</string>
-			<key>label</key> 		<string>Logs</string>
+			<key>cell</key>
+			<string>PSSwitchCell</string>
+			<key>default</key>
+			<true/>
+			<key>defaults</key>
+			<string>com.roccodelpriore.touchtracking.settings</string>
+			<key>key</key>
+			<string>DeleteLogsEnabled</string>
+			<key>label</key>
+			<string>Delete Logs After Upload</string>
 		</dict>
-                <dict>
-                        <key>cell</key>         <string>PSLinkCell</string>
-                        <key>label</key>        <string>View Current Log</string>
-                        <key>detail</key>       <string>TTSettingLogController</string>
-                </dict>
-                <dict>
-                        <key>cell</key>         <string>PSLinkCell</string>
-                        <key>label</key>        <string>View Past Logs</string>
-                        <key>detail</key>       <string>TTSettingLogListController</string>
-                </dict>
-        </array>
+		<dict>
+			<key>cell</key>
+			<string>PSGroupCell</string>
+			<key>label</key>
+			<string>Logs</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSLinkCell</string>
+			<key>label</key>
+			<string>View Current Log</string>
+			<key>detail</key>
+			<string>TTSettingsLogController</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSLinkCell</string>
+			<key>label</key>
+			<string>View Past Logs</string>
+			<key>detail</key>
+			<string>TTSettingsLogListController</string>
+		</dict>
+	</array>
 	<key>title</key>
 	<string>Touch Tracking</string>
 </dict>
