--- a/preferences/entry.plist
+++ b/preferences/entry.plist
@@ -1,10 +1,10 @@
 {
-    entry = {
-	bundle = TTSettings;
-	cell = PSLinkCell;
-	detail = TTSettingsListController;
-	icon = TTSettings.png;
-	isController = 1;
-	label = TouchTracking;
-    };
+	entry = {
+		bundle = TTSettings;
+		cell = PSLinkCell;
+		detail = "TTSettingsListController";
+		icon = "Icon.png";
+		isController = 1;
+		label = TouchTracking;
+	};
 }
