--- a/preferences/Resources/TTSettings.plist
+++ b/preferences/Resources/TTSettings.plist
@@ -60,6 +60,18 @@
 		</dict>
 		<dict>
 			<key>cell</key>
+			<string>PSSwitchCell</string>
+			<key>default</key>
+			<false/>
+			<key>defaults</key>
+			<string>com.roccodelpriore.touchtracking.settings</string>
+			<key>key</key>
+			<string>KeyboardTrackingEnabled</string>
+			<key>label</key>
+			<string>Keyboard Tracking Enabled</string>
+		</dict>
+		<dict>
+			<key>cell</key>
 			<string>PSGroupCell</string>
 			<key>label</key>
 			<string>Logs</string>
