--- a/preferences/Resources/TTSettings.plist
+++ b/preferences/Resources/TTSettings.plist
@@ -32,7 +32,7 @@
 			<key>cell</key>
 			<string>PSGroupCell</string>
 			<key>label</key>
-			<string>Netwrok</string>
+			<string>Network</string>
 		</dict>
 		<dict>
 			<key>cell</key>
